client/public/index.css
#root > img {
  width: -webkit-fill-available;
  height: -webkit-fill-available;
}

.ancestry-choice{
  display: flex;
  flex-direction: column;
  font-weight: bold;
}

.nonhuman-selector {
  display: flex;
  align-items: center;
  justify-content: center;
}

.nonhuman-selector > span {
  font-size: small;
  min-width: fit-content;
}

.ancestry-info {
    margin: 5px;
    padding: 5px;
    background: wheat;
    box-shadow: 2px 2px 1px;
    border-radius: 4px;
}

.ancestry-placeholder {
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px dashed;
  height: 18rem;
  padding: 1rem;
  width: 30rem;
  margin-bottom: 2rem;
}

.auth-error-message {
  background: ivory;
  height: auto;
  z-index: 9000;
  display: flex;
  justify-content: center;
  flex-direction: column;
  padding: 2rem;
  border-radius: 3px;
  font-size: large;
  font-weight: bold;
  align-items: initial;
}

.auth-error-message > button {
    background: sienna;
    border: 1px solid black;
    padding: .5rem;
    margin: .25rem;
    box-shadow: 1px 1px 1px black;
    font-weight: bold;
    color: gold;
}

.auth-error-message > button:hover {
    background: #602c13;
    box-shadow: 1px 1px 1px black;
    color: rgb(250, 221, 58);
    transition: all .2s ease-in-out;
    cursor: pointer;
}

.auth-error-modal {
  position: absolute;
  z-index: 8000;
  background-color: rgba(0, 0, 0, 0.6); 
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column
}

.background-description {
    margin: 2px;
    background: wheat;
    box-shadow: 2px 2px 1px;
    border-radius: 4px;
}

.background-description > p {
  width: 30rem;
  padding: .5rem;
  text-align: justify;
}

.background-placeholder {
  width: 30rem;
  height: 15rem;
  border: 1px dashed;
  margin: 5px;
  padding: 5px;
  background: wheat;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.be-capitalized {
  text-transform: capitalize;
  /* margin-left: 3px; */
}

.bg-selector {
    background: wheat;
    border: 1px solid black;
    box-shadow: 2px 2px 2px;
    padding: 4px;
    margin: 5px;
    font-weight: bold;
    text-transform: uppercase;
    width: fit-content;
}

.intro-content {
  color: white;
  text-shadow: 1px 2px black;
}

.intro-content > p {
  font-size: 18px;
  font-family: sans-serif;
}

.chars-spread {
  list-style: none;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  /* background: burlywood; */
  padding: 1rem;
  width: 100%;
}

.content {
  width: 100%;
}

.container {
  display: flex;
  flex-direction: column;
  height: 100%;
}

#index-title  {
  color: black;
  text-align: center;
  text-shadow: none;
  font-weight: 100;
  font-family: sans-serif;
}

#index-paragraph {
  color: black;
  text-shadow: none;
  text-align: center;
  font-size: 18px;
}

.char-delete {
      border: none;
    padding: 1rem;
    border-radius: 5px;
    color: firebrick;
    font-size: large;
    font-weight: 800;
    background-color: wheat;
    box-shadow: 0px 6px 0px 0px sienna;
    position:relative;
    margin: .5rem;
}

.char-delete:active{
   top: 6px;
   box-shadow: none;
}

.char-delete:focus{
  outline: none;
}

.char-snippet {
  border: 2px solid black;
  box-shadow: 2px 2px;
  border-radius: 4px;
  margin: 5px;
  padding: 10px;
  background: ivory;
  display: grid;
}

.char-snippet-name {
  font-weight: bold;
  font-size: 18px;
}

.char-snippet-class {
  font-style: italic;
}

.char-field-long {
  font-size: 24px;
  font-family: cursive;
  line-height: 24px;
  padding: 5px;
  border-top: none;
  border-left: none;
  border-right: none;
  border-bottom: 1px solid black;
  background: ivory;
  box-shadow: 2px 2px 2px ;
}

.char-field-short {
  font-size: 24px;
  font-family: sans-serif;
  line-height: 24px;
  padding: 5px;
  border-top: none;
  border-left: none;
  border-right: none;
  border-bottom: 1px solid black;
  background: ivory;
  box-shadow: 2px 2px 2px ;
  width: 6rem;
  text-align: center;
}

.char-bio-input{
    background: ivory;
    border-radius: 3px;
    box-shadow: 2px 2px 1px;
    border: 1px solid black;
    padding: 20px;
    text-align: left;
    font-weight: bold;
    font-size: 16px;
    width: 25rem;
    resize: none;
    min-height: 10rem;
    max-height: 10rem;
}

p {
  font-family: sans-serif;
}

.char-bio-show {
    background: ivory;
    border-radius: 3px;
    box-shadow: 2px 2px 1px;
    border: 1px solid black;
    padding: 20px;
    margin: 10px;
    text-align: left;
    font-weight: bold;
    font-size: 16px;
    width: 25rem;
    min-height: 10rem;
}

.char-bio-edit {
  width: -webkit-fill-available;
  /* height: 10rem; */
}

.char-submit {
  padding: 20px;
    width: 100px;
    height: 75px;
    border-bottom: 5px solid;
    position: relative;
    top: 0;
}

.char-submit:hover {
  cursor: pointer;
}

.char-submit:focus{
  outline: none;
}

.char-submit:active {
  top: 5px;
  border: none;
}

.class-description {
    margin: 5px;
    padding: 10px;
    background: wheat;
    box-shadow: 2px 2px 1px;
    border-radius: 4px;
    text-align: center;
}

.class-description > p {
    width: 30rem;
    text-align: justify;
    padding: .5rem;
    margin: 0;
}

.class-freeb {
      margin: 5px;
    padding: 10px;
    background: wheat;
    box-shadow: 2px 2px 1px;
    border-radius: 4px;
    text-align: center;
}

.class-selector {
  /* margin: 5px; */
  /* padding: 10px; */
  border: 4px solid transparent;
  padding-left: 10px;
    padding-right: 10px;
    text-align: center;
}

.class-selector:hover {
   cursor: pointer;
}

.class-selected {
  /* margin: 5px; */
  /* padding: 10px; */
  border: 4px solid black;
  padding-left: 10px;
    padding-right: 10px;
    text-align: center;
}

.class-selected:hover {
   cursor: pointer;
}

.class-list{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  background: wheat;
  box-shadow: 1px 1px 2px;
  border-radius: 3px;
  margin: 2px;
}
/* ... */

